--- a/src/styles/useProductDisplay.css
+++ b/src/styles/useProductDisplay.css
@@ -1,18 +1,35 @@
-.container {
+.productContainer {
     display: flex;
     justify-content: space-between;
     width: 90%;
+    height: 140px;
+}
+
+.productImage {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .productName {
     flex: 2;
     display: flex;
-    padding: 20px;
+    padding: 15px;
     flex-direction: column;
     justify-content: space-around;
 }
 
 .productPrice {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.productCheckmark {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -20,21 +37,26 @@
     justify-content: center;
 }
 
-img {
-    width: 150px;
+.productContainer img {
+    width: 40%;
 }
 
-h2 {
+.productContainer button {
+    background-color: transparent;
+    border: none;
+}
+
+.productContainer h2 {
     font-family: 'Lato', sans-serif;
     font-size: 17px;
 }
 
-p {
+.productContainer p {
     font-family: 'Lato', sans-serif;
-    padding-left: 10px;
+    font-size: 13px;
 }
 
-hr {
+.product hr {
     height: 1px;
     width: 90%;
 }
