--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,6 +4,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    position: fixed;
+    bottom: 0;
+    padding: 5px 0;
+    background-color: white;
 }
 
 .navbar a {
