--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -20,7 +20,7 @@
 .auth-form {
     background: #fff;
     width: 80vw;
-    margin: 55% auto;
+    margin: 30vh auto;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: vertical;
@@ -31,13 +31,20 @@
 }
 
 .auth-form h1 {
-    padding: 35px 35px 0 35px;
+    padding: 35px 0 0 35px;
     font-weight: 300;
     font-size: 30px;
 }
 
+.auth-form .error {
+    text-align: left;
+    padding: 15px 20px 0 35px;
+    color: rgb(255, 57, 57);
+    font-weight: 600;
+}
+
 .auth-form .auth-form-content {
-    padding: 35px;
+    padding: 10px 35px 20px 35px;
     text-align: center;
 }
 
@@ -56,26 +63,6 @@
     outline: none;
     -webkit-transition: all .2s;
     transition: all .2s;
-}
-
-.auth-form .input-field input::-webkit-input-placeholder {
-    text-transform: uppercase;
-}
-
-.auth-form .input-field input::-moz-placeholder {
-    text-transform: uppercase;
-}
-
-.auth-form .input-field input:-ms-input-placeholder {
-    text-transform: uppercase;
-}
-
-.auth-form .input-field input::-ms-input-placeholder {
-    text-transform: uppercase;
-}
-
-.auth-form .input-field input::placeholder {
-    text-transform: uppercase;
 }
 
 .auth-form .input-field input:focus {
@@ -116,12 +103,12 @@
 }
 
 .auth-form .auth-buttons button:nth-child(2) {
-    background: #3db3df;
+    background: #41c3f2;
     color: #fff;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 4px;
 }
 
 .auth-form .auth-buttons button:nth-child(2):hover {
-    background: #2a7d9b;
+    background: #1eb5eb;
 }
