--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -18,34 +18,54 @@
 }
 
 .auth-form {
-    background: #fff;
+    background: #f5f5fa;
     width: 80vw;
-    margin: 30vh auto;
+    margin: 20vh auto;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     flex-direction: column;
-    border-radius: 4px;
+    border-radius: 30px;
     box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
 }
 
 .auth-form h1 {
-    padding: 35px 0 0 35px;
+    padding: 35px 0 5px 35px;
     font-weight: 300;
     font-size: 30px;
+    color: #141010;
 }
 
 .auth-form .error {
-    text-align: left;
-    padding: 15px 20px 0 35px;
-    color: rgb(255, 57, 57);
+    text-align: center;
     font-weight: 600;
+    width: 80%;
+    margin: 15px 20px 0 35px;
+    padding: 10px 5px;
+    color: rgb(255, 57, 57);
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: rgb(255, 57, 57);
 }
 
 .auth-form .auth-form-content {
     padding: 10px 35px 20px 35px;
-    text-align: center;
+    text-align: left;
+}
+
+.auth-form .auth-label {
+    font-weight: 600;
+    font-size: 18px;
+    color: #141010;
+}
+
+.auth-form .auth-description {
+    font-size: 13px;
+    font-weight: 200;
+    font-style: italic;
+    color: #747474;
 }
 
 .auth-form .input-field {
@@ -55,9 +75,11 @@
 .auth-form .input-field input {
     font-size: 17px;
     display: block;
+    background-color: transparent;
     font-family: 'Rubik', sans-serif;
     width: 100%;
     padding: 10px 1px;
+    margin-top: 5px;
     border: 0;
     border-bottom: 1px solid #747474;
     outline: none;
@@ -84,13 +106,14 @@
 .auth-form .auth-buttons button {
     width: 100%;
     border: none;
-    padding: 18px;
+    padding: 23px 18px;
     font-family: 'Rubik', sans-serif;
+    font-size: 15px;
     cursor: pointer;
     text-transform: uppercase;
     background: #e8e9ec;
-    color: #777;
-    border-bottom-left-radius: 4px;
+    color: #148CB8;
+    border-bottom-left-radius: 20px;
     border-bottom-right-radius: 0;
     letter-spacing: 0.2px;
     outline: 0;
@@ -104,9 +127,9 @@
 
 .auth-form .auth-buttons button:nth-child(2) {
     background: #41c3f2;
-    color: #fff;
+    color: #f5f5fa;
     border-bottom-left-radius: 0;
-    border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 20px;
 }
 
 .auth-form .auth-buttons button:nth-child(2):hover {
