--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,8 +6,8 @@
     justify-content: space-evenly;
     position: fixed;
     bottom: 0;
-    padding: 5px 0;
-    background-color: white;
+    padding: 10px 0px 14px 0;
+    background-color: #fff;
 }
 
 .navbar a {
