Mejoramientos de UI

--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -4,3 +4,10 @@
     cursor: pointer;
     justify-content: center;
 }
+
+.productsContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
