--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -1,44 +1,34 @@
 .productContainer {
+    width: 90vw;
+    height: 130px;
     display: flex;
-    justify-content: space-between;
-    width: 90%;
-    height: 140px;
+
+    align-items: center;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 25px;
+    margin: 10px;
 }
 
 .productImage {
-    flex: 2;
+    margin: 0px 12px;
+    padding: 5px; 
+    height: 120px;
+    width: 120px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    vertical-align: middle;
 }
 
-.productName {
-    flex: 2;
-    display: flex;
-    padding: 15px;
-    flex-direction: column;
-    justify-content: space-around;
+.productImage img{
+    height: 110px;
+    max-width: 100px;
 }
 
-.productPrice {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.productCheckmark {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.productContainer img {
+.productDescription {
     width: 40%;
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    margin-right: 10px;
 }
 
 .productContainer button {
@@ -46,17 +36,14 @@
     border: none;
 }
 
-.productContainer h2 {
-    font-family: 'Lato', sans-serif;
-    font-size: 17px;
+.productContainer .addIcon {
+    color: rgb(7, 177, 7);
 }
 
-.productContainer p {
-    font-family: 'Lato', sans-serif;
-    font-size: 13px;
+.productContainer .deleteIcon {
+    color: rgb(211, 17, 17);
 }
 
-.product hr {
-    height: 1px;
-    width: 90%;
+.productFooter {
+    height: 85px;
 }
