--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -19,8 +19,9 @@
 
 .auth-form {
     background: #f5f5fa;
-    width: 80vw;
-    margin: 20vh auto;
+    width: 85vw;
+    margin: 5vh auto;
+    padding-top: 10px;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: vertical;
@@ -31,9 +32,9 @@
 }
 
 .auth-form h1 {
-    padding: 35px 0 5px 35px;
+    padding: 35px 0px 5px 28px;
     font-weight: 300;
-    font-size: 30px;
+    font-size: 33px;
     color: #141010;
 }
 
@@ -51,7 +52,7 @@
 }
 
 .auth-form .auth-form-content {
-    padding: 10px 35px 20px 35px;
+    padding: 10px 25px 20px 25px;
     text-align: left;
 }
 
@@ -73,11 +74,12 @@
 }
 
 .auth-form .input-field input {
-    font-size: 17px;
+    font-size: 20px;
     display: block;
     background-color: transparent;
     font-family: 'Rubik', sans-serif;
     width: 100%;
+    height: 48px;
     padding: 10px 1px;
     margin-top: 5px;
     border: 0;
@@ -105,13 +107,15 @@
 
 .auth-form .auth-buttons button {
     width: 100%;
+    height: 82px;
     border: none;
+    margin-top: 10px;
     padding: 23px 18px;
     font-family: 'Rubik', sans-serif;
     font-size: 15px;
     cursor: pointer;
     text-transform: uppercase;
-    background: #e8e9ec;
+    background: #d8d9dd;
     color: #148CB8;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 0;
