--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -29,6 +29,7 @@
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     margin-right: 10px;
+    word-break: break-word;
 }
 
 .productContainer button {
