--- a/src/styles/Cupons.css
+++ b/src/styles/Cupons.css
@@ -1,98 +1,27 @@
-*, ::before, ::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  .title{
-    display: flex;
-    background: white;
-    justify-content: center;
-    align-items: center;
-    font-size: 90px;
-    font-weight: 50;
-    color: rgb(255, 57, 57);
-  }
-  body {
-    font-family: 'Lato', sans-serif;
-    background: #fff;
-  }
+.cuponsHeader {
+  height: 80px;
+  width: 100vw;
+  position: fixed;
+  top: 0px;
+  background-image: linear-gradient(45deg, #fd4747, #ff6767);
+  color: white;
+  text-align: center;
+}
+
+.cuponsHeader h1 {
+  margin: 20px auto;
+  font-size: 35px;
+}
+body {
+  font-family: 'Lato', sans-serif;
+  background: #fff;
+}
+
+.cuponsContent {
+  padding-top: 2rem;
   
-  .container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 99%;
-    height: 300px;
-    background: #f1f1f1;
-    margin: 100px auto 0;
-    word-break: break-all;
-  }
-  
-  .bloc-tabs {
-    
-    display: flex;
-  }
-  .tabs {
-    font-family: 'Lato', sans-serif;
-    padding: 15px;
-    text-align: center;
-    width: 50%;
-    background: rgba(128, 128, 128, 0.075);
-    cursor: pointer;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.274);
-    box-sizing: content-box;
-    position: relative;
-    outline: none;
-  }
-  .tabs:not(:last-child){
-    border-right: 1px solid rgba(0, 0, 0, 0.274);
-  }
-  
-  .active-tabs  {
-    background: white;
-    border-bottom: 1px solid transparent;
-  }
-  
-  .active-tabs::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -5px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: calc(100% + 2px);
-    height: 5px;
-    background: #FCAB10;
-  }
-  
-  
-  
-  button {
-    border: none; 
-  }
-  .content-tabs {
-    flex-grow : 1;
-  }
-  .content {
-    background: white;
-    padding: 20px;
-    width: 100%;
-    height: 100%;
-    display: none;
-  }
-  .content h2 {
-    padding: 0px 0 5px 0px;
-  }
-  .content hr {
-    width: 100px;
-    height: 2px;
-    background: #222;
-    margin-bottom: 5px;
-  }
-  .content p {
-    width: 100%;
-    height: 100%;
-  }
-  .active-content {
-    display: block;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
