Avance de Popups de cupones
Ya funcionan los pop ups de los cupones

--- a/src/styles/Cupons.css
+++ b/src/styles/Cupons.css
@@ -18,8 +18,7 @@ body {
 }
 
 .cuponsContent {
-  padding-top: 2rem;
-  
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
