--- a/src/styles/Cupons.css
+++ b/src/styles/Cupons.css
@@ -24,3 +24,31 @@ body {
   justify-content: center;
   align-items: center;
 }
+.popUpbtn {
+  cursor: pointer;
+  background-color: #fd4747;
+  color: white;
+  margin-left: 20vw;
+  padding: 25px;
+  font-size: 20px;
+  content: center;
+  border-radius: 10px;
+}
+.popUpBorder{
+  overflow-wrap: break-word;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: white;
+}
+.popUpBorder p{
+  font-size: 20px;
+}
+.popUpBorder h1{
+  font-size: 40px;
+}
+.popUpBorder h2{
+  margin-bottom: 20px;
+}
+.popUpBorder h3{
+  font-size: 25px;
+}
