--- a/src/styles/PopUp.css
+++ b/src/styles/PopUp.css
@@ -13,11 +13,12 @@
 
 .popupInner {
     position: relative;
-    padding: 32px;
+    padding: 5px;
     width: 80%;
     max-width: 640px;
-    background-color: #fff;
+    background-color: #fd4747;
     overflow-wrap: break-word;
+    border-radius: 20px;
 }
 .popup h1{
     margin:0;
@@ -25,6 +26,17 @@
 }
 .popupInner .closeButton{
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: -20px;
+    right: -17px;
+    cursor: pointer;
+    background-color: #fd4747;
+    color: white;
+    padding: 10px;
+    font-size: 22px;
+    content: center;
+    border-radius: 10px;
+}
+.popup img{
+    height:5px;
+    width: 5px;
 }
