--- a/src/components/Memory/Board/Board.css
+++ b/src/components/Memory/Board/Board.css
@@ -2,6 +2,6 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 10px;
-    max-width: 600px;
+    max-width: 90vw;
     margin: 100px auto;
 }
