Juego de Cuadros
Añadi el juego de cuadros que es que el usuario tiene que presionar un cuadro de un color.

Tambien le cambie al memory que te envie directamente a los cupones en vez de que te regrese a home

--- a/src/styles/Cuadros.css
+++ b/src/styles/Cuadros.css
@@ -32,6 +32,11 @@
     background-color: yellow;
     border-radius: 10px;
 }
+.whiteSqr{
+    aspect-ratio: 1 / 1;
+    background-color: white;
+    border-radius: 10px;
+}
 .cuadrosContent {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
